# ghost-in-the-markup

./: .gitignore  README.md  extract.ipynb  prepare_data.ipynb  prepare_data.py  prepare_pie.ipynb  prepare_swde.ipynb  pyproject.toml  reasoning_test.ipynb  requirements.txt  run.ipynb
http-server/: main.py
src/: attack.py  evaluation.py  ghost.py  html.py  models.py  scripts.js  utils.py
src/data/dummy/: recipe_1 copy.html  recipe_1.html  recipe_1_miss.html  recipe_1_miss_script_render.html  recipe_1_opfuscated.html  recipe_2.html  recipe_3.html  recipe_4.html  recipe_5.html
